[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# pythonpath = ["."]
# pythonpath = 'ad_checker'
# addopts = "--ignore=path"

[tool.pyright]
# executionEnvironments = [{ root = "src" }]
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."

